syntax = "proto3";

import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package article.v1;

message Article {
  string id = 1;
  string title = 2;
  string description = 3;
  string hero_image_alt= 4;
  string hero_image_url = 5;
  string cta_title = 6;
  string cta_url = 7;
}

// Article service
service ArticleService {
  // List all articles
  rpc ListArticles (ListArticlesRequest) returns (ListArticlesResponse) {
    option (google.api.http) = {
      post: "/v1/articles"
      body: "*"
    };
  };
}

message ListArticlesRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListArticlesResponse {
  repeated Article articles = 1;
}